--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="icon" type="image/svg+xml" href="/vite.svg" />
   <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet'>
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>vehiclesearch</title>
+  <title>Vehicle Search</title>
 </head>
 
 <body>
